GNOME Bugzilla – Bug 744756
Can't find out if gapplication is marked as busy
Last modified: 2015-02-19 07:40:46 UTC
It's impossible to find out from inside an application wether it is currently marked as busy. The attached patch adds an "is-busy" property for this purpose.
Created attachment 297152 [details] [review] gapplication: add "is-busy" A property that lets the app query its busy state. Also add a test for the busy state and binding properties to it.
Review of attachment 297152 [details] [review]: As usual, missing gio-sections.txt additions :) Please split the test into a separate commit. Please also expand the tests a bit: test multiple busy markers and mixing calls to _mark_busy() with property-based busy notification. ::: gio/gapplication.c @@ +1349,3 @@ G_PARAM_DEPRECATED | G_PARAM_WRITABLE | G_PARAM_STATIC_STRINGS)); + g_object_class_install_property (object_class, PROP_IS_BUSY, Missing doc string here.
Created attachment 297232 [details] [review] gapplication: add "is-busy"
Created attachment 297233 [details] [review] gapplication: test setting and binding busy state
Review of attachment 297232 [details] [review]: Makes sense.
Review of attachment 297233 [details] [review]: looks good
Looks good to me as well. Thanks!
Attachment 297232 [details] pushed as b4ef6d9 - gapplication: add "is-busy" Attachment 297233 [details] pushed as 2b27382 - gapplication: test setting and binding busy state